<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cyan"
    android:orientation="vertical"
    android:id="@+id/ly_default"
    tools:context=".createIcecream.DefaultFlavorFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollviewDefault"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/cyan"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-43dp">

        <ImageButton
            android:id="@+id/btBackToPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/cyan"
            android:src="@drawable/ic_back"
            app:layout_constraintEnd_toStartOf="@+id/txtDefaultFlavor"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDefaultFlavor"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/default_flavor_title"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/lbDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preset_flavor_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDefaultFlavor"/>

        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/spDefaultFlavor"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            style="@style/spinner_style"
            android:background="@color/black"
            android:contentDescription="@string/preset_flavor_list"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbDefault" />

        <TextView
            android:id="@+id/lbSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season_flavor_label"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spDefaultFlavor"/>

        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/spSeasonFlavor"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            style="@style/spinner_style"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@color/black"
            android:contentDescription="@string/season_flavor_list"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbSeason" />

        <Button
            android:id="@+id/btCreateOurIcecream"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="64dp"
            android:background="@drawable/round_shape"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/custom_icecream"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spSeasonFlavor"/>

        <Button
            android:id="@+id/btNext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="64dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_shape"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/continue_action"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btCreateOurIcecream"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>